-- MySQL Script generated by MySQL Workbench
-- Fri May 13 14:57:27 2022
-- Model: New Model    Version: 1.0
-- MySQL Workbench Forward Engineering

SET @OLD_UNIQUE_CHECKS=@@UNIQUE_CHECKS, UNIQUE_CHECKS=0;
SET @OLD_FOREIGN_KEY_CHECKS=@@FOREIGN_KEY_CHECKS, FOREIGN_KEY_CHECKS=0;
SET @OLD_SQL_MODE=@@SQL_MODE, SQL_MODE='ONLY_FULL_GROUP_BY,STRICT_TRANS_TABLES,NO_ZERO_IN_DATE,NO_ZERO_DATE,ERROR_FOR_DIVISION_BY_ZERO,NO_ENGINE_SUBSTITUTION';

-- -----------------------------------------------------
-- Schema java_semi
-- -----------------------------------------------------

-- -----------------------------------------------------
-- Schema java_semi
-- -----------------------------------------------------
CREATE SCHEMA IF NOT EXISTS `java_semi` DEFAULT CHARACTER SET utf8 ;
USE `java_semi` ;

-- -----------------------------------------------------
-- Table `java_semi`.`users`
-- -----------------------------------------------------
CREATE TABLE IF NOT EXISTS `java_semi`.`users` (
                                                   `id` INT NOT NULL AUTO_INCREMENT,
                                                   `name` VARCHAR(45) NOT NULL,
                                                   `email` VARCHAR(255) NOT NULL,
                                                   `pass` VARCHAR(255) NOT NULL,
                                                   `created_at` DATETIME NULL,
                                                   `updated_at` DATETIME NULL,
                                                   PRIMARY KEY (`id`),
                                                   UNIQUE INDEX `email_UNIQUE` (`email` ASC) VISIBLE,
                                                   UNIQUE INDEX `id_UNIQUE` (`id` ASC) VISIBLE)
    ENGINE = InnoDB;


-- -----------------------------------------------------
-- Table `java_semi`.`categories`
-- -----------------------------------------------------
CREATE TABLE IF NOT EXISTS `java_semi`.`categories` (
                                                        `id` INT NOT NULL AUTO_INCREMENT,
                                                        `name` VARCHAR(45) NOT NULL,
                                                        `created_at` DATETIME NOT NULL,
                                                        `updated_at` DATETIME NOT NULL,
                                                        PRIMARY KEY (`id`),
                                                        UNIQUE INDEX `id_UNIQUE` (`id` ASC) VISIBLE)
    ENGINE = InnoDB;


-- -----------------------------------------------------
-- Table `java_semi`.`tasks`
-- -----------------------------------------------------
CREATE TABLE IF NOT EXISTS `java_semi`.`tasks` (
                                                   `id` INT NOT NULL AUTO_INCREMENT,
                                                   `name` VARCHAR(45) NOT NULL,
                                                   `description` VARCHAR(255) NULL,
                                                   `limit` DATE NOT NULL,
                                                   `did_it` TINYINT NOT NULL,
                                                   `created_at` DATETIME NOT NULL,
                                                   `updated_at` DATETIME NOT NULL,
                                                   `user_id` INT NOT NULL,
                                                   `category_id` INT NOT NULL,
                                                   PRIMARY KEY (`id`),
                                                   INDEX `fk_tasks_users_idx` (`user_id` ASC) VISIBLE,
                                                   INDEX `fk_tasks_categories1_idx` (`category_id` ASC) VISIBLE,
                                                   UNIQUE INDEX `id_UNIQUE` (`id` ASC) VISIBLE,
                                                   CONSTRAINT `fk_tasks_users`
                                                       FOREIGN KEY (`user_id`)
                                                           REFERENCES `java_semi`.`users` (`id`)
                                                           ON DELETE NO ACTION
                                                           ON UPDATE NO ACTION,
                                                   CONSTRAINT `fk_tasks_categories1`
                                                       FOREIGN KEY (`category_id`)
                                                           REFERENCES `java_semi`.`categories` (`id`)
                                                           ON DELETE NO ACTION
                                                           ON UPDATE NO ACTION)
    ENGINE = InnoDB;


SET SQL_MODE=@OLD_SQL_MODE;
SET FOREIGN_KEY_CHECKS=@OLD_FOREIGN_KEY_CHECKS;
SET UNIQUE_CHECKS=@OLD_UNIQUE_CHECKS;
