@startuml

class Default {
    Integer id
    Timestamp createdAt
    Timestamp updatedAt
}

class User {
    String name
    String email
    String pass

    + signUpUser()
    + login()
    + list()
}

class Task {
    String name
    String description
    Date limit
    Integer didIt

    + search()
    + insertTask()
    + didTask()
    + update()
}

class Category {
    String name

    + initialCategory()
    + search()
    + insertCategory()
}

Default <|-- User
Default <|-- Task
Default <|-- Category

User "1"-"*" Task
Task "*"-"1" Category
User "1"--"*" Category


@enduml
